--- a/app/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/src/main/res/layout/fragment_pokemon_detail.xml
@@ -1,14 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.PokemonDetail">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
 
-</FrameLayout>
+       <androidx.cardview.widget.CardView
+           android:id="@+id/card_view"
+           android:layout_marginLeft="16dp"
+           android:layout_marginRight="16dp"
+           android:layout_marginTop="100dp"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           app:cardCornerRadius="8dp"
+           app:cardElevation="0dp"
+           app:cardBackgroundColor="@android:color/white">
+
+           <LinearLayout
+               android:orientation="vertical"
+               android:gravity="center_horizontal"
+               android:padding="16dp"
+               android:layout_marginTop="80dp"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content">
+
+               <TextView
+                   android:id="@+id/name"
+                   android:text="Pokemon"
+                   android:textSize="30sp"
+                   android:textStyle="bold"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+               <TextView
+                   android:id="@+id/height"
+                   android:text="Height"
+                   android:layout_marginBottom="10dp"
+                   android:textSize="16sp"
+                   android:textStyle="bold"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+               <TextView
+                   android:id="@+id/weight"
+                   android:text="Weight"
+                   android:layout_marginBottom="10dp"
+                   android:textSize="16sp"
+                   android:textStyle="bold"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+               <TextView
+                   android:id="@+id/type"
+                   android:text="Type"
+                   android:layout_marginBottom="10dp"
+                   android:textSize="16sp"
+                   android:textStyle="bold"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+               <androidx.recyclerview.widget.RecyclerView
+                   android:id="@+id/recycler_type"
+                   android:layout_marginBottom="10dp"
+                   android:layout_width="match_parent"
+                   android:layout_height="40dp">
+               </androidx.recyclerview.widget.RecyclerView>
+               <TextView
+                   android:id="@+id/weakness"
+                   android:text="Weakness"
+                   android:layout_marginBottom="10dp"
+                   android:textSize="16sp"
+                   android:textStyle="bold"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+               <androidx.recyclerview.widget.RecyclerView
+                   android:id="@+id/recycler_weakness"
+                   android:layout_width="match_parent"
+                   android:layout_height="40dp">
+               </androidx.recyclerview.widget.RecyclerView>
+               <TextView
+                   android:id="@+id/prev_evolution"
+                   android:text="Prev Evolution"
+                   android:layout_marginBottom="10dp"
+                   android:textSize="16sp"
+                   android:textStyle="bold"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+               <androidx.recyclerview.widget.RecyclerView
+                   android:id="@+id/recycler_prev_evolution"
+                   android:layout_width="match_parent"
+                   android:layout_height="40dp">
+               </androidx.recyclerview.widget.RecyclerView>
+               <TextView
+                   android:id="@+id/next_evolution"
+                   android:text="Next Evolution"
+                   android:layout_marginBottom="10dp"
+                   android:textSize="16sp"
+                   android:textStyle="bold"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+               <androidx.recyclerview.widget.RecyclerView
+                   android:id="@+id/recycler_next_evolution"
+                   android:layout_width="match_parent"
+                   android:layout_height="40dp">
+               </androidx.recyclerview.widget.RecyclerView>
+           </LinearLayout>
+       </androidx.cardview.widget.CardView>
+
+       <ImageView
+           android:id="@+id/pokemon_image"
+           android:layout_alignTop="@id/card_view"
+           android:layout_centerHorizontal="true"
+           android:layout_marginTop="-120dp"
+           android:src="@drawable/ic_launcher_background"
+           android:layout_width="200dp"
+           android:layout_height="200dp">
+       </ImageView>
+   </RelativeLayout>
+
+</RelativeLayout>
